# medol-ai-lab-test

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  main.py  settings.py  utils.py
app/auth/: __init__.py  auth.py
app/config/: __init__.py
app/core/: logger.py
app/db/: __init__.py
app/db/models/: __init__.py  base.py  file_info.py  user.py
app/db/models/orm/: file_info.py  token.py  user.py
app/db/models/pydantic/: file_info.py  user.py
app/exceptions/: auth_middleware.py  domain.py  generic.py
app/schemas/: __init__.py  schemas.py
app/schemas/requests/: __init__.py  requests.py
app/schemas/responses/: auth.py
app/utils/: jwt.py
migrations/: env.py
migrations/versions/: c5027c6a3847_initial.py
scripts/: exec_service.sh
tests/: conftest.py
tests/endpoints/: test_current_user.py
